<resources>
    <string name="app_name">Sample Room GDrive</string>
    <string name="default_web_client_id" translatable="false">588135051296-f3dq8dp84dp8hbeu2ikrlpob10sitbe0.apps.googleusercontent.com</string>
    <string name="unknown">Unknown</string>
    <string name="login_google">Login Google</string>
    <string name="logout">Logout</string>
    <string name="add_data">Add Data</string>
    <string name="local_data">Local Data</string>
    <string name="submit">Submit</string>
    <string name="google_drive">Google Drive</string>
    <string name="input_data">Input data</string>
    <string name="account_">account: %1$s</string>
    <string name="restore_from_GDrive">Restore from GDrive</string>
    <string name="backup_to_GDrive">Backup to GDrive</string>
    <string name="loading_">Loading...</string>
</resources>