<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_db"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/local_data"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="20dp"
                        android:clipToPadding="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_db"
                        tools:listitem="@layout/adapter_local_data" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_view">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_data"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/input_data" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/btn_add_data"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/holo_blue_light"
                            android:gravity="center"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:text="@string/submit"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_drive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_database">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_gdrive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/google_drive"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_gdrive">

                        <TextView
                            android:id="@+id/btn_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/holo_blue_light"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/login_google"
                            android:textColor="@android:color/black" />

                        <LinearLayout
                            android:id="@+id/group_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone"
                            tools:visibility="visible">

                            <TextView
                                android:id="@+id/btn_backup"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/holo_green_light"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/backup_to_GDrive"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/btn_restore"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:background="@android:color/holo_orange_light"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/restore_from_GDrive"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/txt_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="50dp"
                                android:text="@string/account_"
                                tools:text="name@email.com" />

                            <TextView
                                android:id="@+id/btn_logout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:background="@android:color/holo_red_dark"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/logout"
                                android:textColor="@android:color/white" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>